# grc-toolkit

./: .tmp_append.py  CONTRIBUTING.md  Information Security Management System Program.markdown  LICENSE  NIST.IR.8477.txt  README.md  controls-framework.xlsx - Controls.csv
.windsurf/: mcp.json
GRC-Toolkit/: CONTRIBUTING.md  README.md
GRC-Toolkit/agentic_ai/: GUARDRAILS.md
GRC-Toolkit/changelog/: updates.md
GRC-Toolkit/data/: controls.json  mappings.json  risks.json
GRC-Toolkit/integrations/: jira-control-exception-workflow.md
GRC-Toolkit/schemas/: controls.schema.json  mappings.schema.json  risks.schema.json  threats.schema.json
agentic_ai/scanners/: GDPR-COMPLIANCE-SCANNER.md  HIPAA-HITRUST-COMPLIANCE-SCANNER.md  HIPAA-QUICK-SCAN.md  MULTI-STANDARD-COMPLIANCE-SCANNER.md
anti-patterns/: common-failures.md
assessments/gap-analysis/: gap-analysis-template.csv  gap-analysis-template.md
assessments/scoring/: scoring-model.md
audits/audit-programs/: nist-au-family-audit-program.md
audits/checklists/: access-control-audit-checklist.md  (+1 more)
best-practices/: program-operations.md
changelog/: updates.md
data/: threats.json
grc-mcp-server/: README.md  pyproject.toml
grc-mcp-server/src/grc_mcp_server/: __init__.py  __main__.py  data_loader.py  ir8477.py  server.py  utils.py
grc-mcp-server/src/grc_mcp_server/tools/: controls.py  fetchers.py  mappings.py  oscal.py  risks.py
integrations/: servicenow-evidence-request-flow.md
lessons-learned/: audit-retrospective-template.md
playbooks/: evidence-collection-playbook.md
schemas/: mappings.schema.json
(+129 files in other folders)
