[project]
name = "grc-mcp-server"
version = "0.1.0"
description = "MCP server for GRC Toolkit - structured data access for controls, risks, threats, OSCAL, and cross-framework mappings"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
grc-mcp-server = "grc_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grc_mcp_server"]
